--- a/main.yaml
+++ b/main.yaml
@@ -1,7 +1,8 @@
 # APT generic installation: This updates, upgrades and install all generic linux apt deps.
 - hosts: localhost
-  become: true
   vars_files: "vars/main.yml"
+  become: true
+  become_user: "{{username}}"
 
   roles:
     - user
