--- a/roles/user/tasks/main.yml
+++ b/roles/user/tasks/main.yml
@@ -4,6 +4,7 @@
   tags: apt_generic
   ansible.builtin.import_tasks:
     file: src/apt.yaml
+  become_user: root
 
 # Adding specific additional directories for my personnal usage.
 - name: Additional directories
@@ -12,7 +13,7 @@
 
 # Git configuration (email, names, .gitignore, etc.)
 - name: Git configuration
-  tags: git_conf
+  tags: git
   ansible.builtin.import_tasks: src/gitconf.yaml
 
 # Terminal installation and settings
@@ -20,7 +21,12 @@
   tags: terminal
   ansible.builtin.import_tasks: src/terminal.yaml
 
-# APT generic installation: This updates, upgrades and install all generic linux apt deps.
+# Julia environment (LTS and ODBC drivers)
+- name: Julia environment
+  tags: julia
+  ansible.builtin.import_tasks: src/julia.yaml
+
+# Docker complete installation
 # - name: Docker installation
 #   tags: docker
 #   ansible.builtin.import_tasks:
