--- a/roles/user/tasks/src/julia.yaml
+++ b/roles/user/tasks/src/julia.yaml
@@ -5,36 +5,36 @@
 # This list of tasks regroups all the operations related to
 # Julia and direct dependencies (ODBC, private registries, etc.)
 
-# Julia LTS 1.6
-- name: Downloading Julia LTS 1.6
-  ansible.builtin.unarchive:
-    src: https://julialang-s3.julialang.org/bin/linux/x64/1.6/julia-1.6.7-linux-x86_64.tar.gz
-    dest: /home/{{username}}/Logiciels/
-    remote_src: yes
+# # Julia LTS 1.6
+# - name: Downloading Julia LTS 1.6
+#   ansible.builtin.unarchive:
+#     src: https://julialang-s3.julialang.org/bin/linux/x64/1.6/julia-1.6.7-linux-x86_64.tar.gz
+#     dest: "{{ LOGICIEL_DIR.path }}"
+#     remote_src: yes
 
-# ODBC Drivers (PostGres and MySQL)
-- name: apt deps
-  ansible.builtin.apt:
-    pkg:
-    - odbc-postgresql
-    - unixodbc
-  become_user: root
+# # ODBC Drivers (PostGres and MySQL)
+# - name: apt deps
+#   ansible.builtin.apt:
+#     pkg:
+#     - odbc-postgresql
+#     - unixodbc
+#   become_user: root
 
 - name: Download MySQL mysql-connector-odbc
   unarchive:
     src: https://dev.mysql.com/get/Downloads/Connector-ODBC/8.0/mysql-connector-odbc-8.0.19-linux-glibc2.12-x86-64bit.tar.gz
-    dest: /home/{{username}}/TEMP
+    dest: "{{ TEMP_DIR.path }}"
     remote_src: yes
 
 - name: Copy MySQL connectors to /usr/local/bin
   copy:
-    src: /home/{{username}}/TEMP/mysql-connector-odbc-8.0.19-linux-glibc2.12-x86-64bit/bin/
+    src: "{{TEMP_DIR.path}}/mysql-connector-odbc-8.0.19-linux-glibc2.12-x86-64bit/bin/"
     dest: /usr/local/bin
   become_user: root
 
 - name: Copy MySQL connectors to /usr/local/lib
   copy:
-    src: /home/{{username}}/TEMP/mysql-connector-odbc-8.0.19-linux-glibc2.12-x86-64bit/lib/
+    src: "{{TEMP_DIR.path}}/mysql-connector-odbc-8.0.19-linux-glibc2.12-x86-64bit/lib/"
     dest: /usr/local/lib
   become_user: root
 
