--- a/roles/user/tasks/src/docker.yaml
+++ b/roles/user/tasks/src/docker.yaml
@@ -41,7 +41,7 @@
 
 - name: add user to docker group
   ansible.builtin.user:
-    name: "{{username}}"
+    name: "{{ USERNAME }}"
     groups: docker
     append: yes
 
