--- a/roles/user/tasks/src/terminal.yaml
+++ b/roles/user/tasks/src/terminal.yaml
@@ -17,8 +17,7 @@
 - name: git clone the config repo
   ansible.builtin.git:
     repo: git@github.com:Quche/config.git
-    dest: "{{ TEMP_DIR.path }}/config"
-
+    dest: "{{ TEMP_DIR }}/config"
 
 # Terminator
 - name: Terminator paths
@@ -33,7 +32,7 @@
 
 - name: Terminator COPY configfile from repo
   copy:
-    src: "{{ TEMP_DIR.path }}/config/terminator"
+    src: "{{ TEMP_DIR }}/config/terminator"
     dest: /home/{{ USERNAME }}/.config/terminator/config
 
 
@@ -41,7 +40,7 @@
 - name: Downloading OhMyZsh
   ansible.builtin.get_url:
     url: https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh
-    dest: "{{ TEMP_DIR.path }}"
+    dest: "{{ TEMP_DIR }}"
 
 - name: Deleting .oh-my-zsh present file
   file:
@@ -55,13 +54,13 @@
 
 - name: Copy .zshrc from the repo files to ~/.
   copy:
-    src: "{{ TEMP_DIR.path }}/config/zshrc"
+    src: "{{ TEMP_DIR }}/config/zshrc"
     dest: /home/{{ USERNAME }}/.zshrc
   become_user: "{{ USERNAME }}"
 
 - name: Installing fresh version
   ansible.builtin.shell: |
-    sh {{ TEMP_DIR.path }}/install.sh --keep-zshrc
+    sh {{ TEMP_DIR }}/install.sh --keep-zshrc
 
 - name: Installing OhMyZsh deps
   ansible.builtin.shell: |
@@ -84,11 +83,11 @@
 - name: Download Kubectl last stable version
   get_url:
     url: https://storage.googleapis.com/kubernetes-release/release/{{kubectl_version.content}}/bin/linux/amd64/kubectl
-    dest: "{{ TEMP_DIR.path }}"
+    dest: "{{ TEMP_DIR }}"
 
 - name: Add kubectl to /usr/local/bin
   copy:
-    src: "{{ TEMP_DIR.path }}/kubectl"
+    src: "{{ TEMP_DIR }}/kubectl"
     dest: /usr/local/bin/
     mode: a+x
   become_user: root
