--- a/roles/user/tasks/main.yml
+++ b/roles/user/tasks/main.yml
@@ -12,9 +12,9 @@
   ansible.builtin.import_tasks: src/filesystem.yaml
 
 # Git configuration (email, names, .gitignore, etc.)
-- name: Git configuration
-  tags: git
-  ansible.builtin.import_tasks: src/gitconf.yaml
+# - name: Git configuration
+#   tags: git
+#   ansible.builtin.import_tasks: src/gitconf.yaml
 
 # Terminal installation and settings
 - name: Terminal installation and configuration
@@ -22,9 +22,9 @@
   ansible.builtin.import_tasks: src/terminal.yaml
 
 # Julia environment (LTS and ODBC drivers)
-- name: Julia environment
-  tags: julia
-  ansible.builtin.import_tasks: src/julia.yaml
+# - name: Julia environment
+#   tags: julia
+#   ansible.builtin.import_tasks: src/julia.yaml
 
 # Docker complete installation
 - name: Docker installation
@@ -32,3 +32,8 @@
   ansible.builtin.import_tasks:
     file: src/docker.yaml
   become_user: root
+
+# Post installation cleaning
+- name: Post installation cleaning
+  tags: postinstall
+  ansible.builtin.import_tasks: src/postinstall.yaml
