--- a/roles/user/tasks/src/docker.yaml
+++ b/roles/user/tasks/src/docker.yaml
@@ -11,6 +11,20 @@
     apt-get remove docker docker-engine docker.io containerd runc
   ignore_errors: True
 
+- name: Clean docker keyring
+  ansible.builtin.shell:
+    rm -f /etc/apt/keyrings/docker.gpg
+  ignore_errors: True
+
+- name: Add docker keyring
+  ansible.builtin.shell:
+    curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+
+- name: Add docker repository
+  apt_repository:
+    repo: deb [signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu jammy stable
+    state: present
+
 - name: Install docker dependencies
   ansible.builtin.apt:
     pkg:
@@ -18,13 +32,6 @@
     - curl
     - gnupg
     - lsb-release
-
-- name: Set up Docker repository
-  ansible.builtin.shell: |
-    mkdir -p /etc/apt/keyrings
-    curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg -y
-    echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \
-    $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
 
 - name: Update the apt
   ansible.builtin.apt:
