--- a/roles/user/tasks/src/julia.yaml
+++ b/roles/user/tasks/src/julia.yaml
@@ -12,34 +12,20 @@
     dest: "{{ LOGICIEL_DIR.path }}"
     remote_src: yes
 
-# ODBC Drivers (PostGres and MySQL)
-- name: apt deps
-  ansible.builtin.apt:
-    pkg:
-    - odbc-postgresql
-    - unixodbc
-  become_user: root
-
-- name: Download MySQL mysql-connector-odbc
-  unarchive:
-    src: https://dev.mysql.com/get/Downloads/Connector-ODBC/8.0/mysql-connector-odbc-8.0.19-linux-glibc2.12-x86-64bit.tar.gz
-    dest: "{{ TEMP_DIR.path }}"
+# Julia 1.9
+- name: Downloading Julia 1.9
+  ansible.builtin.unarchive:
+    src: https://julialang-s3.julialang.org/bin/linux/x64/1.9/julia-1.9.1-linux-x86_64.tar.gz
+    dest: "{{ LOGICIEL_DIR.path }}"
     remote_src: yes
 
-- name: Copy MySQL connectors to /usr/local/bin
-  copy:
-    src: "{{TEMP_DIR.path}}/mysql-connector-odbc-8.0.19-linux-glibc2.12-x86-64bit/bin/"
-    dest: /usr/local/bin
-  become_user: root
 
-- name: Copy MySQL connectors to /usr/local/lib
-  copy:
-    src: "{{TEMP_DIR.path}}/mysql-connector-odbc-8.0.19-linux-glibc2.12-x86-64bit/lib/"
-    dest: /usr/local/lib
-    mode: a+x
-  become_user: root
-
-- name: Create MySQL connector `MySQL ODBC 8.0 Driver`
-  shell:
-    /usr/local/bin/myodbc-installer -a -d -n  "MySQL ODBC 8.0 Driver" -t "Driver=/usr/local/lib/libmyodbc8w.so"
-  become_user: root
+- name: Update .zshrc file
+  ansible.builtin.blockinfile:
+    dest: "~/.zshrc"
+    block: |
+      alias julia16={{ LOGICIEL_DIR.path }}/julia-1.6.7/bin/julia
+      alias julia19={{ LOGICIEL_DIR.path }}/julia-1.9.1/bin/julia
+    marker: '# {mark} ANSIBLE MANAGED BLOCK - julia'
+    insertbefore: BOF
+    create: yes
