--- a/vars/main.yml
+++ b/vars/main.yml
@@ -3,4 +3,6 @@
 USERNAME: 'quche'
 
 # Folders to be created (from $HOME)
-TEMP_DIR: 'TEMP'
+TEMP_DIR: "/home/{{ USERNAME }}/TEMP"
+LOGICIEL_DIR: "/home/{{ USERNAME }}/Documents/Logiciels"
+GITHUB_DIR: "/home/{{ USERNAME }}/Documents/GitHub"
