--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,6 +1,6 @@
 ---
 # vars file for user
-USERNAME: 'quche'
+USERNAME: 'quentin'
 
 # Folders to be created (from $HOME)
 TEMP_DIR: "/home/{{ USERNAME }}/TEMP"
